--- a/helm/go-web-app-chart/templates/deployment.yaml
+++ b/helm/go-web-app-chart/templates/deployment.yaml
@@ -16,6 +16,6 @@ spec:
     spec:
       containers:
       - name: go-web-app
-        image: navvod/go-web-app
+        image: navvod/go-web-app:{{ .Values.image.tag }}
         ports:
         - containerPort: 8090
